# charternetwork

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: optimize.yml
charternetwork/: __main__.py  analytics.py  arcs.py  baseline.py  config.py  ingest.py  legs.py  model.py  optimize.py  pipeline.py  viz.py  viz_data.py
data/processed/: airports.json  team_airports.json
data/results/: optimized_schedule.csv
docs/: ceo_presentation.md
